1. 添加夜间模式

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </main>
     <footer>
-        <h3 class="site_name">chapu's page</h3>
+        <h3 class="site_name"><a href="./">chapu's page</a></h3>
         <p class="update">上次更新于：2021年 3月 31日</p>
         <p class="location"><i class="iconfont icon-location"></i> China</p>
     </footer>
