--- a/index.html
+++ b/index.html
@@ -1,33 +1,149 @@
 <!DOCTYPE html>
 <html lang="zh">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chapu's page</title>
-    <link rel="apple-touch-icon" sizes="64x64" href="./asset/images/favicon.png">
-    <link rel="icon" type="image/png" href="./asset/images/favicon.png">
-    <link rel="stylesheet" href="./css/iconfont/iconfont.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/jquery-3.5.1.min.js"></script>
-    <script src="./js/index.js"></script>
-</head>
-<body>
-    <script>
-        // 页面首次加载
-        if (window.performance.navigation.type == 0) {
-            document.querySelector("body").className += " loading";
-        }
-    </script>
-    <main>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>yangxu's page</title>
+        <link
+            rel="apple-touch-icon"
+            sizes="64x64"
+            href="./asset/images/favicon.png"
+        />
+        <link rel="icon" type="image/png" href="./asset/images/favicon.png" />
+        <meta name="keywords" content="chapubest,self pages" />
+        <meta name="description" content="这是yangxu的个人页面。" />
+        <meta name="ahthor" content="yangxu" />
+        <link rel="stylesheet" href="./css/iconfont/iconfont.css" />
+        <link rel="stylesheet" href="./css/style.css" />
+    </head>
+    <body>
+        <script>
+            // 页面首次加载
+            if (window.performance.navigation.type == 0) {
+                document.querySelector("body").className += " loading";
+            }
+        </script>
         <div class="container">
-            <p>糟糕，这里没有东西可以展示 ┌(。Д。)┐</p>
-            <p>去看看<a href="https://chapubest.github.io/blog/">博客</a>吧，Gitee 上的<a href="http://chapu.gitee.io/blog/">镜像地址</a></p>
+            <aside>
+                <div class="update">
+                    <span class="date text">2021.4.21</span>
+                </div>
+                <div class="location">
+                    <i class="iconfont icon-location"></i>
+                    <span class="text">China Hefei</span>
+                </div>
+                <div class="dark-mode">
+                    <svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"></path>
+                    </svg>
+                </div>
+            </aside>
+            <main>
+                <header>糟糕，这里暂时没有东西可以展示 ┌(。Д。)┐</header>
+                <section id="project">
+                    <h2>self projects</h2>
+                    <ul class="project-list">
+                        <li>
+                            <p>
+                                <a
+                                    class="text-link"
+                                    href="http://chapu.gitee.io/arknights/#/"
+                                    target="_blank"
+                                    >arknights</a
+                                >
+                                - 仿明日方舟
+                                <span class="tag">web</span>
+                                <span class="tag">vue</span>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <a
+                                    class="text-link"
+                                    href="http://chapu.gitee.io/duitang/#/"
+                                    target="_blank"
+                                    >duitang</a
+                                >
+                                - 仿堆糖网
+                                <span class="tag">web</span>
+                                <span class="tag">vue</span>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <a class="text-link" href="https://gitee.com/chapu/todo#todo" target="_blank">todo</a>
+                                - 仿 iphone 提醒事项
+                                <span class="tag">wechat applet</span>
+                                <span class="tag">ios</span>
+                            </p>
+                        </li>
+                        <li class="pending-project">
+                            <p>
+                                <i class="iconfont icon-pending"></i>
+                                <a class="text-link" target="_blank">hexo-theme-cue</a>
+                                - 精简的 hexo 主题
+                                <span class="tag">hexo theme</span>
+                            </p>
+                        </li>
+                        <li class="pending-project">
+                            <p>
+                                <i class="iconfont icon-pending"></i>
+                                <a class="text-link" target="_blank">aui</a>
+                                - 移动 web 端 ui 库
+                                <span class="tag">ui</span>
+                                <span class="tag">vue</span>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <a class="text-link" target="_blank">just demo</a>
+                                - 其他简单的 demo 集合
+                                <span class="tag">demo</span>
+                                <span class="tag">web</span>
+                            </p>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>blog</h2>
+                    <p>
+                        去看看<a
+                            class="text-link"
+                            href="https://chapubest.github.io/blog/"
+                            target="_blank"
+                            >博客</a
+                        >吧，位于 Gitee 上的<a
+                        class="text-link"
+                            href="http://chapu.gitee.io/blog/"
+                            target="_blank"
+                            >镜像地址</a
+                        >
+                    </p>
+                </section>
+                <section>
+                    <h2>contact</h2>
+                    <ul class="contact-list">
+                        <li>
+                            <p>
+                                <a  class="text-link" href="mailto:yangxupublic@163.com"
+                                    >yangxupublic@163.com</a
+                                >
+                                - official email
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <a  class="text-link" href="mailto:yangxuchn@qq.com"
+                                    >yangxuchn@qq.com</a
+                                >
+                                - self email
+                            </p>
+                        </li>
+                    </ul>
+                </section>
+            </main>
         </div>
-    </main>
-    <footer>
-        <h3 class="site_name"><a href="./">chapu's page</a></h3>
-        <p class="update">上次更新于：2021年 3月 31日</p>
-        <p class="location"><i class="iconfont icon-location"></i> China</p>
-    </footer>
-</body>
+        <script src="./js/jquery-3.5.1.min.js"></script>
+        <script src="./js/index.js"></script>
+    </body>
 </html>
