--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <script>
-            // 页面首次加载
+            // first loading
             if (window.performance.navigation.type == 0) {
                 document.querySelector("body").className += " loading";
             }
@@ -71,7 +71,7 @@
                         </li>
                         <li>
                             <p>
-                                <a class="text-link" href="https://gitee.com/chapu/todo#todo" target="_blank">todo</a>
+                                <a class="text-link" href="https://gitee.com/chapu/todo" target="_blank">todo</a>
                                 - 仿 iphone 提醒事项
                                 <span class="tag">wechat applet</span>
                                 <span class="tag">ios</span>
@@ -96,7 +96,7 @@
                         </li>
                         <li>
                             <p>
-                                <a class="text-link" target="_blank">just demo</a>
+                                <a class="text-link" href="https://gitee.com/chapu/just-demo" target="_blank">just demo</a>
                                 - 其他简单的 demo 集合
                                 <span class="tag">demo</span>
                                 <span class="tag">web</span>
